--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -2,8 +2,14 @@
 layout: base
 ---
 
+Blog posts coming soon. One of the categories of posts will be <strong>Minimum Viable Learning</strong>, which will be short posts on concepts or languages that attract my attention.
+
+Until then, you can read a little <a href="/about/">about me</a>.
+
+{% comment %}
 {% for post in paginator.posts %}
   {% include post.html post=post link_title=true excerpt=true %}
 {% endfor %}
 
 {% include pagination.html %}
+{% endcomment %}
