--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -2,9 +2,14 @@
 layout: base
 ---
 
-Blog posts coming soon. One of the categories of posts will be <strong>Minimum Viable Learning</strong>, which will be short posts on concepts or languages that attract my attention.
+<p>Blog posts coming soon. Some of the areas of interest I'll be covering will include:</p>
+<ul>
+<li><strong>Big Mud Ball</strong> (of course), covers topics such as refactoring, monoliths, microservices, SOA, and domain driven design.</li>
+<li><strong>Minimum Viable Learning</strong>, which will be short posts on concepts or languages that attract my attention.</li>
+<li><strong>Reviews</strong> will be as simple as a new book announcement, or an actual full review of a book, video or related item.</li>
+</ul>
 
-Until then, you can read a little <a href="/about/">about me</a>.
+<p>Until then, you can read a little <a href="/about/">about me</a>, and for those interested, here's my <a target="_blank" href="/assets/pdf/Resume-2017-08-18-Public.pdf">current resume</a> (I'm currently looking).</p>
 
 {% comment %}
 {% for post in paginator.posts %}
