Add concepts for person, company and tech; create a few examples; add Daily Dose feature

--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -11,10 +11,14 @@ layout: base
 
 <p>Until then, you can read a little <a href="/about/">about me</a>, and for those interested, here's my <a target="_blank" href="/assets/pdf/Resume-2017-08-18-Public.pdf">current resume</a> (I'm currently looking).</p>
 
-{% comment %}
+<h1 class="post-title"><a href="/daily/2017/09/01/" data-flip="title">Daily Dose for 2017.09.01</a></h1>
+<p>TypeScript, Ruby, Unit Testing, Unreal Engine 4, Terraform <a href="/daily/2017/09/01/">and more>>></a>.</p><br/>
+
+<h1 class="post-title"><a href="/daily/2017/08/31" data-flip="title">Daily Dose for 2017.08.31</a></h1>
+<p>TensorFlow, Swift, IoT, Agile Design <a href="/daily/2017/08/31">and more>>></a>.</p><br/>
+
 {% for post in paginator.posts %}
   {% include post.html post=post link_title=true excerpt=true %}
 {% endfor %}
 
 {% include pagination.html %}
-{% endcomment %}
