Updated landing page with overview of sections

--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -6,14 +6,11 @@ layout: base
 <p>, <a href="/daily/2017/10/13/">and more>>></a>.</p><br/>
 {% endcomment %}
 
-<div class="language-c# highlighter-rouge"><pre class="highlight"><code><span class="kt">  var</span> <span class="n">bigMudBall</span> <span class="p">=</span> <span class="s">"Big Ball of Mud"</span><span class="p">;</span>
-  <span class="kt">var</span> <span class="n">spaghettiCode</span> <span class="p">=</span> <span class="s">"Big Ball of Mud"</span><span class="p">;</span>
-  <span class="k">if</span> <span class="p">(</span><span class="n">bigMudBall</span> <span class="p">==</span> <span class="n">spaghettiCode</span><span class="p">)</span>
-  <span class="p">{</span>
-    <span class="n">Console</span><span class="p">.</span><span class="nf">WriteLine</span><span class="p">(</span><span class="s">"What better way than knowledge to fight the Big Ball of Mud?"</span><span class="p">);</span>
-  <span class="p">}</span>
-  </code></pre>
-</div>
+<ul>
+  <li><strong>Daily Dose: </strong>&nbsp;Covers daily book/video deals (some free); new/updated books and videos.</li>
+  <li><strong>Blog Posts:</strong>&nbsp;You know, those articles normally associated with a tech blog.</li>
+  <li><strong>Books/Videos:</strong>&nbsp;New book announcements or full book/video reviews.</li>
+</ul>
 
 <h1 class="post-title"><a href="/daily/2017/10/13/" data-flip="title">Daily Dose for 2017.10.13</a></h1>
 <div class="image-box"><a href="{{site.url}}/daily/2017/10/13/#packt-daily"><img class="resize" alt="Learning Raspberry Pi" src="/assets/img/learning/packt/learning-raspberry-pi.jpg"/></a></div>
