Dialy Dose for 2017.10.27

--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -2,8 +2,8 @@
 layout: base
 ---
 {% comment %}
-<h1 class="post-title"><a href="/daily/2017/10/26/" data-flip="title">Daily Dose for 2017.10.26</a></h1>
-<p>, <a href="/daily/2017/10/26/">and more>>></a>.</p><br/>
+<h1 class="post-title"><a href="/daily/2017/10/27/" data-flip="title">Daily Dose for 2017.10.27</a></h1>
+<p>, <a href="/daily/2017/10/27/">and more>>></a>.</p><br/>
 {% endcomment %}
 
 <ul>
@@ -12,16 +12,21 @@ layout: base
   <li><strong>Books/Videos:</strong>&nbsp;New book announcements or full book/video reviews.</li>
 </ul>
 
+<h1 class="post-title"><a href="/daily/2017/10/27/" data-flip="title">Daily Dose for 2017.10.27</a></h1>
+<div class="image-box"><a href="{{site.url}}/daily/2017/10/27/#packt-daily"><img class="resize" alt="Object-Oriented JavaScript, Second Edition" src="/assets/img/learning/packt/object-oriented-javascript-second-edition.png"/></a></div>
+<div class="image-box"><a href="{{site.url}}/daily/2017/10/27/#apress-daily"><img class="resize" alt="Pro Hadoop Data Analytics" src="/assets/img/learning/apress/pro-hadoop-data-analytics.png"/></a></div>
+<div class="image-box"><a href="{{site.url}}/daily/2017/10/27/#new1"><img class="resize" alt="Software Design X-Rays" src="/assets/img/learning/pragmatic/software-design-x-rays.jpg"/></a></div>
+<div class="image-box"><a href="{{site.url}}/daily/2017/10/27/#manning-daily-1"><img class="resize" alt="Half Off All MEAPs" src="/assets/img/learning/manning/2017-10-27-manning-sale.png"/></a></div>
+<p>Apache Beam, Apache Falcon, Apache Mahout, Apache Tika, Bayesian Analysis, Big Data, Closures, CodeScene, Conway's Law, Cypher, Data Analytics, Decorator, ELK Stack, Firebug, Gremlin, Hadoop, JavaScript, JBoss Drools, JHipster, Lucene, Modular Monoliths, Neo4j, Object-Oriented Programming, Observer, Prototype, Python, Refactoring, Scala, Singleton, Software Design, Solr, Technical Debt, Unified Analytics, <a href="/daily/2017/10/27/">and more>>></a>.</p><br/>
+
 <h1 class="post-title"><a href="/daily/2017/10/26/" data-flip="title">Daily Dose for 2017.10.26</a></h1>
 <div class="image-box"><a href="{{site.url}}/daily/2017/10/26/#packt-daily"><img class="resize" alt="Advanced Penetration Testing for Highly-Secured Environments, Second Edition" src="/assets/img/learning/packt/advanced-penetration-testing-for-highly-secured-environments-second-edition.jpg"/></a></div>
 <div class="image-box"><a href="{{site.url}}/daily/2017/10/26/#apress-daily"><img class="resize" alt="Pro Apache Phoenix" src="/assets/img/learning/apress/pro-apache-phoenix.png"/></a></div>
 <div class="image-box"><a href="{{site.url}}/daily/2017/10/26/#manning-daily-1"><img class="resize" alt="Grokking FRP" src="/assets/img/learning/manning/grokking-frp-meap.png"/></a></div>
 <div class="image-box"><a href="{{site.url}}/daily/2017/10/26/#manning-daily-2"><img class="resize" alt="Usability Matters" src="/assets/img/learning/manning/usability-matters.png"/></a></div>
 <div class="image-box"><a href="{{site.url}}/daily/2017/10/26/#manning-daily-3"><img class="resize" alt="Reactive Application Development" src="/assets/img/learning/manning/reactive-application-development-meap.png"/></a></div>
-
 <div class="image-box"><a href="{{site.url}}/daily/2017/10/26/#new1"><img class="resize" alt="Writing Great Specifications" src="/assets/img/learning/manning/writing-great-specifications-final.png"/></a></div>
 <div class="image-box"><a href="{{site.url}}/daily/2017/10/26/#new2"><img class="resize" alt="Reactive Programming with RxJS 5" src="/assets/img/learning/pragmatic/reactive-programming-with-rxjs-5.png"/></a></div>
-
 <p>Actors, Akka, Android, Apache Flume, Apache Hive, Apache Phoenix, Apache Pig, Apache Spark, Apache Tephra, Big Data, CQRS, Cucumber, Cycle.js, Docker, Domain-Driven Design, Event Sourcing, Functional Reactive Programming, Gherkin, Hadoop, HBase, HDFS, Hortonworks HDP, Internet of Things, Java, JavaScript ES6, Kali Linux, Lagom, MapReduce, Metasploit, Microservices, Mobile Development, Nmap, Node.js, Penetration Testing, Play, Reactive Programming, RESTful APIs, RxJava, RxJS 5, Scala, Specification by Example, Typesafe Stack, Usability, User Experience Design, User Interface Design, YARN, Zookeeper, <a href="/daily/2017/10/26/">and more>>></a>.</p><br/>
 
 <h1 class="post-title"><a href="/daily/2017/10/25/" data-flip="title">Daily Dose for 2017.10.25</a></h1>
@@ -43,12 +48,6 @@ layout: base
 <p>Armitage, ASP.NET, Aspect-Oriented Programming, Autofac, Burp Suite, Business Analytics, Business Statistics, Castle DynamicProxy, C#, Data Mining, Dependency Injection, Descriptive Analytics, Digital Forensics, .NET Framework, End-to-End Testing, Htop, Inversion of Control, Java, JavaScript, Jest, Kali Linux 2, Logistic Regression, Machine Learning, Maltego, Metasploit, Microservices, Multiple Linear Regression, Nmap, NUnit, OpenVAS, OWASP ZAP, PostSharp, Predictive Analytics, R, Simple Injector, Simple Linear Regression, Software Testing, Spring Boot, Spring Framework 5.0, Spring MVC, Spring Security, Spring WebFlux, Supervised Machine Learning, tcpdump, Unicorn-Scan, Unit Testing, Unsupervised Machine Learning, Vue Test Utils, Vue.js, Vuex, Windows Penetration Testing, WinDump, Zenmap, <a href="/daily/2017/10/24/">and more>>></a>.</p><br/>
 
 <h1 class="post-title"><a href="/daily/2017/10/23/" data-flip="title">Daily Dose for 2017.10.23</a></h1>
-<div class="image-box"><a href="{{site.url}}/daily/2017/10/23/#packt-daily"><img class="resize" alt="Object-Oriented Programming with PHP5" src="/assets/img/learning/packt/object-oriented-programming-with-php5.jpg"/></a></div>
-<div class="image-box"><a href="{{site.url}}/daily/2017/10/23/#apress-daily"><img class="resize" alt="Design Patterns in PHP and Laravel" src="/assets/img/learning/apress/design-patterns-in-php-and-laravel.png"/></a></div>
-<div class="image-box"><a href="{{site.url}}/daily/2017/10/23/#manning-daily-1"><img class="resize" alt="React in Motion" src="/assets/img/learning/manning/react-in-motion-meap.png"/></a></div>
-<div class="image-box"><a href="{{site.url}}/daily/2017/10/23/#manning-daily-2"><img class="resize" alt="React in Action" src="/assets/img/learning/manning/react-in-action-meap.png"/></a></div>
-<div class="image-box"><a href="{{site.url}}/daily/2017/10/23/#manning-daily-3"><img class="resize" alt="Redux in Action" src="/assets/img/learning/manning/redux-in-action-meap.png"/></a></div>
-<div class="image-box"><a href="{{site.url}}/daily/2017/10/23/#new1"><img class="resize" alt="Troubleshooting Java Performance" src="/assets/img/learning/apress/troubleshooting-java-performance.png"/></a></div>
 <p>Abstract Factory, Active Record Pattern, Adapter Pattern, Bridge Pattern, Builder Pattern, Chain of Responsibility, Command Pattern, Composite Pattern, Decorator Pattern, Design Patterns, Eclipse MAT, Facade Pattern, Factory Method, Factory Pattern, Flyweight Pattern, heapSpank, Interpreter Pattern, Iterator Pattern, Java, Java Performance Tuning, JavaScript, JMeter, Laravel 5.3, Manual Thread Dump Profiling, Mediator Pattern, Memento Pattern, MySQLi, Object-Oriented Programming, Observer Pattern, PHP5, PHP7, PHPUnit, Prototype Pattern, Proxy Pattern, React, React Native, Redux, Simple Factory Pattern, Simple Singleton Pattern, Singleton Pattern, SOLID Principles, State Pattern, Strategy Pattern, Template Method Pattern, Visitor Pattern, Wiremock, <a href="/daily/2017/10/23/">and more>>></a>.</p><br/>
 
 <h1 class="post-title"><a href="/daily/2017/10/22/" data-flip="title">Daily Dose for 2017.10.22</a></h1>
