Images for Twitter daily deals: 2017.11.30

--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -12,58 +12,7 @@ layout: base
   <li><strong>Books/Videos:</strong>&nbsp;New book announcements or full book/video reviews.</li>
 </ul>
 
-<h1 class="post-title"><a href="/daily/2017/11/28/" data-flip="title">Daily Dose for 2017.11.28</a></h1>
-<div class="image-box"><a href="{{site.url}}/daily/2017/11/28/#packt-daily"><img class="resize" alt="Mastering React Native" src="/assets/img/learning/packt/mastering-react-native.jpg"/></a></div>
-<div class="image-box"><a href="{{site.url}}/daily/2017/11/28/#apress-daily"><img class="resize" alt="Pro SQL Server on Microsoft Azure" src="/assets/img/learning/apress/pro-sql-server-on-microsoft-azure.png"/></a></div>
-<div class="image-box"><a href="{{site.url}}/daily/2017/11/28/#manning-daily-1"><img class="resize" alt="Web Performance in Action" src="/assets/img/learning/manning/web-performance-in-action-final.png"/></a></div>
-<div class="image-box"><a href="{{site.url}}/daily/2017/11/28/#manning-daily-2"><img class="resize" alt="Progressive Web Apps" src="/assets/img/learning/manning/progressive-web-apps-meap.png"/></a></div>
-<div class="image-box"><a href="{{site.url}}/daily/2017/11/28/#manning-daily-3"><img class="resize" alt="Front-End Tooling with Gulp, Bower, and Yeoman" src="/assets/img/learning/manning/front-end-tooling-with-gulp-bower-and-yeoman-med.png"/></a></div>
-<div class="image-box"><a href="{{site.url}}/daily/2017/11/28/#new1"><img class="resize" alt="Pro Java 9 Games Development" src="/assets/img/learning/apress/pro-java-9-games-development.png"/></a></div>
-
-<p>Android Development, Azure SQL Database, Azure VM, Bower, CSS, Flux, GIMP, Gulp, HTTP/2, iOS Development, Java 3D, Java 9, JavaFX 9, JavaScript, JOGL, Microsoft Azure, NetBeans 9, Node.js, OpenGL, Progressive Web Apps, React, React Native, Redux, SQL Server, Web Performance, Yeoman, <a href="/daily/2017/11/28/">and more>>></a>.</p><br/>
-
-<h1 class="post-title"><a href="/daily/2017/11/27/" data-flip="title">Daily Dose for 2017.11.27</a></h1>
-<div class="image-box"><a href="{{site.url}}/daily/2017/11/27/#packt-daily"><img class="resize" alt="Scientific Computing with Python 3" src="/assets/img/learning/packt/scientific-computing-with-python-3.png"/></a></div>
-<div class="image-box"><a href="{{site.url}}/daily/2017/11/27/#apress-daily"><img class="resize" alt="Penetration Testing Basics" src="/assets/img/learning/apress/penetration-testing-basics.png"/></a></div>
-<div class="image-box"><a href="{{site.url}}/daily/2017/11/27/#manning-daily-1"><img class="resize" alt="D3.js in Action, Second Edition" src="/assets/img/learning/manning/d3-js-in-action-second-edition-final.png"/></a></div>
-<div class="image-box"><a href="{{site.url}}/daily/2017/11/27/#manning-daily-2"><img class="resize" alt="D3.js in Motion" src="/assets/img/learning/manning/d3-js-in-motion.png"/></a></div>
-<div class="image-box"><a href="{{site.url}}/daily/2017/11/27/#manning-daily-3"><img class="resize" alt="Gnuplot in Action, Second Edition" src="/assets/img/learning/manning/gnuplot-in-action-second-edition.png"/></a></div>
-
-<p>Clickjacking Attacks, Command Injection, Cross Site Request Forgery, D3.js, Data Analysis, Data Visualization, ES6, Evasion Attacks, Fuzzing, Gnuplot 5, JavaScript, Matplotlib, Metasploit, Penetration Testing, Python 3, SciPy, SQL Injection, SymPy, XML External Entity Attacks, XSS, <a href="/daily/2017/11/27/">and more>>></a>.</p><br/>
-
-<h1 class="post-title"><a href="/daily/2017/11/26/" data-flip="title">Daily Dose for 2017.11.26</a></h1>
-<div class="image-box"><a href="{{site.url}}/daily/2017/11/26/#packt-daily"><img class="resize" alt="ASP.NET Core and Angular 2" src="/assets/img/learning/packt/asp-net-core-and-angular-2.png"/></a></div>
-<div class="image-box"><a href="{{site.url}}/daily/2017/11/26/#informit-daily"><img class="resize" alt="The LaTeX Companion, Second Edition" src="/assets/img/learning/informit/latex-companion-second-edition.jpg"/></a></div>
-<div class="image-box"><a href="{{site.url}}/daily/2017/11/26/#apress-daily"><img class="resize" alt="PHP 7 Quick Scripting Reference" src="/assets/img/learning/apress/php-7-quick-scripting-reference.png"/></a></div>
-<div class="image-box"><a href="{{site.url}}/daily/2017/11/26/#manning-daily-1"><img class="resize" alt="Software Development Metrics" src="/assets/img/learning/manning/software-development-metrics.jpg"/></a></div>
-<div class="image-box"><a href="{{site.url}}/daily/2017/11/26/#manning-daily-2"><img class="resize" alt="Agile Metrics in Action" src="/assets/img/learning/manning/agile-metrics-in-action.jpg"/></a></div>
-<div class="image-box"><a href="{{site.url}}/daily/2017/11/26/#manning-daily-3"><img class="resize" alt="Re-Engineering Legacy Software" src="/assets/img/learning/manning/reengineering-legacy-software.png"/></a></div>
-<p>Angular 2, Ansible, ASP.NET Core 1.0, ASP.NET Core Identity, Bootstrap, Entity Framework Core 1.0, Jenkins, JWT, LaTeX, LESS, OAuth2, OpenID, OpenIddict, PHP 7, Refactoring, Software Metrics, <a href="/daily/2017/11/26/">and more>>></a>.</p><br/>
-
-<h1 class="post-title"><a href="/daily/2017/11/25/" data-flip="title">Daily Dose for 2017.11.25</a></h1>
-<div class="image-box"><a href="{{site.url}}/daily/2017/11/25/#packt-daily"><img class="resize" alt="Programming Kotlin" src="/assets/img/learning/packt/programming-kotlin.jpg"/></a></div>
-<div class="image-box"><a href="{{site.url}}/daily/2017/11/25/#apress-daily"><img class="resize" alt="Java XML and JSON" src="/assets/img/learning/apress/java-xml-and-json.png"/></a></div>
-<div class="image-box"><a href="{{site.url}}/daily/2017/11/25/#manning-daily-1"><img class="resize" alt="ASP.NET Core in Action" src="/assets/img/learning/manning/asp-net-core-in-action.png"/></a></div>
-<div class="image-box"><a href="{{site.url}}/daily/2017/11/25/#manning-daily-2"><img class="resize" alt="Entity Framework Core in Action" src="/assets/img/learning/manning/entity-framework-core-in-action-meap.png"/></a></div>
-<div class="image-box"><a href="{{site.url}}/daily/2017/11/25/#manning-daily-3"><img class="resize" alt="Microservices in .NET Core" src="/assets/img/learning/manning/microservices-in-net-core.png"/></a></div>
-<p>.NET Core, ASP.NET, ASP.NET Core, Backend for FrontEnds, C#, Entity Framework Core, Gson, Java, JSON, JsonPath, Kotlin, Lagom, Microservices, mJson, Nancy, OWIN, SAX, SeriLog, Shopping Cart, StAX, XML, XPath, XSLT, xUnit, <a href="/daily/2017/11/25/">and more>>></a>.</p><br/>
-
-<h1 class="post-title"><a href="/daily/2017/11/24/" data-flip="title">Daily Dose for 2017.11.24</a></h1>
-<div class="image-box"><a href="{{site.url}}/daily/2017/11/24/#new1"><img class="resize" alt="Node.js Design Patterns, Second Edition" src="/assets/img/learning/packt/node-js-design-patterns-second-edition.jpg"/></a></div>
-<div class="image-box"><a href="{{site.url}}/daily/2017/11/24/#apress-daily"><img class="resize" alt="Beginning SQL Queries, Second Edition" src="/assets/img/learning/apress/beginning-sql-queries-second-edition.png"/></a></div>
-<div class="image-box"><a href="{{site.url}}/daily/2017/11/24/#manning-daily-1"><img class="resize" alt="Phoenix in Action" src="/assets/img/learning/manning/phoenix-in-action-meap.png"/></a></div>
-<div class="image-box"><a href="{{site.url}}/daily/2017/11/24/#manning-daily-2"><img class="resize" alt="Elixir in Action" src="/assets/img/learning/manning/elixir-in-action.png"/></a></div>
-<div class="image-box"><a href="{{site.url}}/daily/2017/11/24/#manning-daily-3"><img class="resize" alt="The Little Elixir & OTP Guidebook" src="/assets/img/learning/manning/the-little-elixir-and-otp-guidebook.png"/></a></div>
-<p>Adapter Pattern, Babel, BEAM, Callback Pattern, Command Pattern, Decorator Pattern, Ecto, Elixir, Factory Pattern, Functional Programming, Module System, Node.js 6, Observer Pattern, OTP Framework, Phoenix 1.3, Proxy Pattern, Publish/Subscribe Pattern, React, Revealing Constructor Pattern, Revealing Module Pattern, SQL, State Pattern, Strategy Pattern, Template Pattern, Universal JavaScript, Webpack, <a href="/daily/2017/11/24/">and more>>></a>.</p><br/>
-
-<h1 class="post-title"><a href="/daily/2017/11/23/" data-flip="title">Daily Dose for 2017.11.23</a></h1>
-<div class="image-box"><a href="{{site.url}}/daily/2017/11/23/#packt-daily"><img class="resize" alt="Modern Python Cookbook" src="/assets/img/learning/packt/modern-python-cookbook.png"/></a></div>
-<div class="image-box"><a href="{{site.url}}/daily/2017/11/23/#apress-daily"><img class="resize" alt="Digital Video Editing Fundamentals" src="/assets/img/learning/apress/digital-video-editing-fundamentals.png"/></a></div>
-<div class="image-box"><a href="{{site.url}}/daily/2017/11/23/#manning-daily-1"><img class="resize" alt="iOS Development with Swift" src="/assets/img/learning/manning/ios-development-with-swift-final.png"/></a></div>
-<div class="image-box"><a href="{{site.url}}/daily/2017/11/23/#manning-daily-2"><img class="resize" alt="Swift in Depth" src="/assets/img/learning/manning/swift-in-depth-meap.png"/></a></div>
-<div class="image-box"><a href="{{site.url}}/daily/2017/11/23/#manning-daily-3"><img class="resize" alt="Xamarin in Action" src="/assets/img/learning/manning/xamarin-in-action-meap.png"/></a></div>
-<div class="image-box"><a href="{{site.url}}/daily/2017/11/23/#pluralfree"><img class="resize" alt="Getting Started with OWASP Zed Attack Proxy (ZAP) for Web Application Penetration Testing" src="/assets/img/learning/pluralsight/getting-started-with-owasp-zed.png"/></a></div>
-<p>Android, Corel Video Studio Ultimate X9, C#, Digital Video, EditShare Lightworks 12, IOS, MVVM, OWASP, Penetration Testing, Python, Swift, Video Editing, Web Application Security, Xamarin, Xcode 9, Zed Attack Proxy, <a href="/daily/2017/11/23/">and more>>></a>.</p><br/>
+<p>While we're busy adding new functionality to the site, please see my <a href="https://twitter.com/Dhabolt/">Twitter Account</a> for the latest current Daily Dose.</p>
 
 <h1 class="post-title"><a href="/daily/2017/11/" data-flip="title">Daily Dose Archives for November 2017</a></h1>
 
